--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jade": "~1.6.0",
     "morgan": "~1.3.0",
     "passport": "^0.2.1",
+    "passport-facebook": "^1.0.3",
     "passport-local": "^1.0.0",
     "serve-favicon": "~2.1.3"
   }
