--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "passport-local": "^1.0.0",
     "request": "^2.51.0",
     "serve-favicon": "~2.1.3"
+  },
+  "devDependencies": {
+    "should": "^4.6.0"
   }
 }
